# sprint_the_game

./: Cargo.toml  README.md
src/: logic.rs  main.rs  renderer.rs  sprint_the_game.rs
src/logic/: edit.rs  menu.rs  play.rs  victory.rs
src/logic/play/: level.rs
src/renderer/: edit.rs  menu.rs  palette.rs  play.rs  utils.rs  victory.rs
src/renderer/play/: level.rs
src/renderer/shaders/: color.wgsl  texture.wgsl
src/renderer/utils/: pipeline.rs  quad.rs
