[package]
name = "sprint_the_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29"
wgpu = "0.19"
wgpu_text = "0.8.7"
pollster = "0.3"
glam = "0.27"
bytemuck = { version = "1.15", features = ["derive"] }
image = { version = "0.25.1", features = ["png", "jpeg"] }